--- a/spotify_querying/spotify_webpage/static/style.css
+++ b/spotify_querying/spotify_webpage/static/style.css
@@ -88,3 +88,42 @@
               [data-role="recordings"] > .row > audio {
                   outline: none;
               }
+
+              body {
+                position: relative;
+                height: 100%;
+                width: 100%;
+                margin: 0;
+                text-align: center;
+                            }
+                .button {
+                  background-color: #4CAF50;
+                  border: none;
+                  color: white;
+                  padding: 15px 32px;
+                  text-decoration: none;
+                  font-size: 16px;
+                  margin: 4px 2px;
+                  cursor: pointer;
+                  transition-duration: 0.4s;
+                  display: flex;
+                }
+                .button-container {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                }
+                .button:hover {
+                  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+                }
+                            [data-role="controls"] > button[data-recording="true"] {
+                                background-color: #ff2038;
+                                background-image: #b30003;
+                                background-image: -o-linear-gradient(bottom, #ff2038 0%, #b30003 100%);
+                                background-image: linear-gradient(0deg, #ff2038 0%, #b30003 100%);
+                            }
+                }
+                .player {
+                padding: 300px 300px;
+                }
+                
