--- a/spotify_querying/spotify_webpage/templates/index.html.j2
+++ b/spotify_querying/spotify_webpage/templates/index.html.j2
@@ -1,54 +1,171 @@
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>Audio Recorder</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="static/style.css" />
+        <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+        <script src="https://markjivko.com/dist/recorder.js"></script>
+        <script>
+        function myFunction(){
+          var x = document.getElementById("myDIV");
+          x.style.display = "none";
+          document.getElementById("player").innerHTML="<embed src=\""+"stop"+"\" hidden=\"false\" loop=\"false\" />";
+          var y = document.getElementById("exit");
+          y.style.display = "none";
+          var z = document.getElementById("use");
+          z.style.display = "none";
+          var r = document.getElementById("rbutton");
+          r.style.display = "block";
+          var g = document.getElementById("generate");
+          g.style.display = "block";
+          var rr = document.getElementById("record");
+          rr.style.display = "none";
+          var e = document.getElementById("text");
+          e.style.display = "none";
+        }
+        function button() { //this doesn't work for some reason
+        var x = document.getElementById("rbutton");
+        if (x.innerText == "Record Your Own Audio") {
+          x.innerText = "Stop";
+        } else {
+          x.innerText = "Record Your Own Audio";
+        }
+      }
+        function load(){
+          var z = document.getElementById("use");
+          z.style.display = "none";
+          var y = document.getElementById("exit");
+          y.style.display = "none";
+          var t = document.getElementById("text");
+          t.style.display = "none";
+        }
+        function record(){
+          var y = document.getElementById("record");
+          y.style.display = "block";
+          var g = document.getElementById("generate");
+          g.style.display = "none";
+        }
+        function random(){
+             var x = document.getElementById("myDIV");
+             x.style.display = "block";
+             var soundFile = "static/"+Math.round(Math.random() * (50 - 1) + 1)+".wav";
+             document.getElementById("player").innerHTML="<embed src=\""+soundFile+"\" hidden=\"false\" loop=\"false\" />";
+             var y = document.getElementById("exit");
+             y.style.display = "block";
+             var z = document.getElementById("use");
+             z.style.display = "block";
+             var r = document.getElementById("record");
+             r.style.display = "none";
+             var s = document.getElementById("rbutton");
+             s.style.display = "none";
+        }
+            jQuery(document).ready(function () {
+                var $ = jQuery;
+                var myRecorder = {
+                    objects: {
+                        context: null,
+                        stream: null,
+                        recorder: null
+                    },
+                    init: function () {
+                        if (null === myRecorder.objects.context) {
+                            myRecorder.objects.context = new (
+                                    window.AudioContext || window.webkitAudioContext
+                                    );
+                        }
+                    },
+                    start: function () {
+                        var options = {audio: true, video: false};
+                        navigator.mediaDevices.getUserMedia(options).then(function (stream) {
+                            myRecorder.objects.stream = stream;
+                            myRecorder.objects.recorder = new Recorder(
+                                    myRecorder.objects.context.createMediaStreamSource(stream),
+                                    {numChannels: 1}
+                            );
+                            myRecorder.objects.recorder.record();
+                        }).catch(function (err) {});
+                    },
+                    stop: function (listObject) {
+                        var z = document.getElementById("exit");
+                        z.style.display = "block";
+                        var y = document.getElementById("use");
+                        y.style.display = "block";
+                        var t = document.getElementById("text");
+                        t.style.display = "block";
+                        if (null !== myRecorder.objects.stream) {
+                            myRecorder.objects.stream.getAudioTracks()[0].stop();
+                        }
+                        if (null !== myRecorder.objects.recorder) {
+                            myRecorder.objects.recorder.stop();
 
-{% extends 'base.html.j2' %}
+                            if (null !== listObject
+                                    && 'object' === typeof listObject
+                                    && listObject.length > 0) {
 
-{% block title %}
-Spotify Webpage
-{% endblock %}
+                                myRecorder.objects.recorder.exportWAV(function (blob) {
+                                    var url = (window.URL || window.webkitURL)
+                                            .createObjectURL(blob);
 
-{% block body %}
+                                    var audioObject = $('<audio controls></audio>')
+                                            .attr('src', url);
 
-<div class="container h-100">
-    <div class="card row justify-content-center align-items-center" >
-        <div class="card-body">
+                                    var downloadObject = $('<a>&#9660;</a>')
+                                            .attr('href', url)
 
 
-            <h5 class="card-title">Search For a Song</h5>
-            <form action="/" method="POST">
-                <div class="input-group">
-                <div class="form-outline">
-                    <input placeholder="Search Song/Artist" name="search" type="search" id="form1" class="form-control" />
-                </div>
-                <input type="submit" class="btn btn-primary">
-                </input>
-                </div>
-            </form>
+                                    var holderObject = $('<div class="row"></div>')
+                                            .append(audioObject)
+                                            .append(downloadObject);
 
-            {% for result in results %}
-                <ul id="myUL">
-                    <li><a onclick="getSongData('{{ result['preview_url'] }}')">{{ result['name'] }}</a></li>
-                </ul>
-            {% endfor %}
+                                    listObject.append(holderObject);
+                                });
+                            }
+                        }
+                    }
+                };
+
+                var listObject = $('[data-role="recordings"]');
+
+                $('[data-role="controls"] > button').click(function () {
+
+                    myRecorder.init();
+
+                    var buttonState = !!$(this).attr('data-recording');
+
+                    if (!buttonState) {
+                        $(this).attr('data-recording', 'true');
+                        myRecorder.start();
+                    } else {
+                        $(this).attr('data-recording', '');
+                        myRecorder.stop(listObject);
+                    }
+                });
+            });
+        </script>
+    </head>
+    <body onload="load()">
+      <div class="button-container">
+        <div class="holder">
+            <div data-role="controls">
+                <button onlick="myFunction()" class="button" onlick="button()" onclick="record()" id="rbutton">Record Your Own Audio</button>
+            </div>
         </div>
+        <button onclick='random();' class="button" id="generate">Generate Random Audio</button>
+
+      </div>
+
+      <div class="button-container">
+      <div data-role="recordings" id="record"></div>
+      <div id="myDIV">
+      <span id='player' class="player"></span>
+      </div>
     </div>
-
+<p id="text">Clip must be at least 30 seconds long!</p>
+<div class="button-container">
+<button onclick="myFunction()" id="exit" class="button">Exit</button>
+<button id="use" class="button">Use</button>
 </div>
 
-<div class="holder">
-    <div data-role="controls">
-        <button class="button button2">Record</button>
-    </div>
-    <div data-role="recordings"></div>
-</div>
-<button onclick='random();' class="button button2">Generate Random Audio</button>
-<div id="myDIV">
-  <audio controls autoplay muted>
-    <source src="/static/songs/5.wav" type="audio/wav">
-  </audio>
-</div>
-<span id='player'></span>
-
-
-
-
-
-{% endblock %}
+    </body>
+</html>
