--- a/spotify_querying/spotify_webpage/static/style.css
+++ b/spotify_querying/spotify_webpage/static/style.css
@@ -1,44 +1,37 @@
-#myInput {
-    background-image: url('/css/searchicon.png'); /* Add a search icon to input */
-    background-position: 10px 12px; /* Position the search icon */
-    background-repeat: no-repeat; /* Do not repeat the icon image */
-    width: 100%; /* Full-width */
-    font-size: 16px; /* Increase font-size */
-    padding: 12px 20px 12px 40px; /* Add some padding */
-    border: 1px solid #ddd; /* Add a grey border */
-    margin-bottom: 12px; /* Add some space below the input */
+/* #myInput {
+    background-image: url('/css/searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
   }
 
   #myUL {
-    /* Remove default list styling */
     list-style-type: none;
     padding: 0;
     margin: 0;
   }
 
   #myUL li a {
-    border: 1px solid #ddd; /* Add a border to all links */
-    margin-top: -1px; /* Prevent double borders */
-    background-color: #f6f6f6; /* Grey background color */
-    padding: 12px; /* Add some padding */
-    text-decoration: none; /* Remove default text underline */
-    font-size: 18px; /* Increase the font-size */
-    color: black; /* Add a black text color */
-    display: block; /* Make it into a block element to fill the whole list */
+    border: 1px solid #ddd;
+    margin-top: -1px;
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
   }
 
   #myUL li a:hover:not(.header) {
-    background-color: #eee; /* Add a hover effect to all links, except for headers */
-  }
-
-  .card{
-    /* width: 10vw; */
-    /* height: auto; */
-    /* margin: auto; */
-  }
+    background-color: #eee;
+  } */
 
 
-  body {
+  /* body {
   position: absolute;
   display: -webkit-box;
   display: -webkit-flex;
@@ -125,5 +118,4 @@
                 }
                 .player {
                 padding: 300px 300px;
-                }
-                
+                } */
