code that works for webpage

--- a/spotify_querying/spotify_webpage/templates/index.html.j2
+++ b/spotify_querying/spotify_webpage/templates/index.html.j2
@@ -5,7 +5,7 @@ Spotify Webpage
 {% endblock %}
 
 {% block body %}
-<!-- 
+
 <div class="container h-100">
     <div class="card row justify-content-center align-items-center" >
         <div class="card-body">
@@ -52,7 +52,8 @@ Spotify Webpage
 <div class="button-container">
 <button onclick="myFunction()" id="exit" class="button">Exit</button>
 <button id="use" class="button">Use</button>
-</div> -->
+</div>
 
+<button type="button" class="btn btn-primary">Run!</button>
 
 {% endblock %}
