--- a/spotify_querying/spotify_webpage/templates/base.html.j2
+++ b/spotify_querying/spotify_webpage/templates/base.html.j2
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bare - Start Bootstrap Template</title>
+        <title>Lakeside ML Project</title>
     </head>
     <body onload="load()">
 
@@ -20,9 +20,9 @@
       <!-- Responsive navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-              <a class="navbar-brand" href="#">Start Bootstrap</a>
+              <a class="navbar-brand" href="#">Best CS5 ML Project</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                       <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
@@ -36,10 +36,10 @@
                           </ul>
                       </li>
                   </ul>
-              </div>
+              </div> -->
           </div>
       </nav>
-      
+
 
       {% block body %} body empty {% endblock %}
 
