--- a/spotify_querying/spotify_webpage/templates/base.html.j2
+++ b/spotify_querying/spotify_webpage/templates/base.html.j2
@@ -1,10 +1,9 @@
-
-
   <!DOCTYPE html>
   <html lang=en dir=ltr>
     <head>
       <meta charset=utf-8>
-      <link rel="stylesheet" type="text/css" href="static/style.css" />
+
+      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
         <script src="https://markjivko.com/dist/recorder.js"></script>
@@ -22,26 +21,11 @@
           <div class="container">
               <a class="navbar-brand" href="#">Best CS5 ML Project</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-              <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                      <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><hr class="dropdown-divider" /></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          </ul>
-                      </li>
-                  </ul>
-              </div> -->
+
           </div>
       </nav>
 
       <main role="main">
-
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
           <div class="container">
@@ -73,7 +57,7 @@
 
           <hr>
 
-        </div> <!-- /container -->
+        </div>
 
 
 
@@ -88,7 +72,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                ...
+                {% include 'spotify.html.j2' %}
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -110,7 +94,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                ...
+                {% include 'random.html.j2' %}
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -132,7 +116,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                ...
+                {% include 'record.html.j2' %}
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
