importing things and they're working

--- a/webpage stuff/spotify_webpage/templates/base.html.j2
+++ b/webpage stuff/spotify_webpage/templates/base.html.j2
@@ -127,6 +127,27 @@
         </div>
 
 
+        <!-- Genre Modal -->
+        <!-- <div class="modal fade" id="genreModal" tabindex="-1" role="dialog" aria-labelledby="genreModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="genreModalLabel">Genre Modal</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                {% include 'genre.html.j2' %}
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+
 
       </main>
 
