--- a/webpage stuff/spotify_webpage/templates/base.html.j2
+++ b/webpage stuff/spotify_webpage/templates/base.html.j2
@@ -12,7 +12,7 @@
         <meta name="author" content="" />
         <title>Lakeside ML Project</title>
     </head>
-    <body onload="load()">
+    <body>
 
 
 
