bug fixes and QoL

--- a/webpage stuff/spotify_webpage/templates/spotify.html.j2
+++ b/webpage stuff/spotify_webpage/templates/spotify.html.j2
@@ -3,7 +3,7 @@
 
         <h5 class="card-title">Search For a Song</h5>
         <div class="inline-display">
-        <form method="POST">
+        <form method="POST" onsubmit="return false;">
 
 
                 <input  id="input" placeholder="Search Song/Artist" name="search" type="search" id="form1" class="form-control" />
@@ -16,6 +16,7 @@
 
 
         <div id="listdiv"> </div>
+
 
 
 
