bug fixes and additional features!
afsfdsafasf

--- a/webpage stuff/spotify_webpage/templates/spotify.html.j2
+++ b/webpage stuff/spotify_webpage/templates/spotify.html.j2
@@ -2,14 +2,14 @@
     <div class="card-body">
 
         <h5 class="card-title">Search For a Song</h5>
+
         <div class="inline-display">
+
         <form method="POST" onsubmit="return false;">
+<!-- thx to this person for helping me stop submit https://stackoverflow.com/questions/8664486/javascript-code-to-stop-form-submission-->
 
 
-                <input  id="input" placeholder="Search Song/Artist" name="search" type="search" id="form1" class="form-control" />
-
-
-
+        <input  id="input" placeholder="Search Song/Artist" name="search" type="search" id="form1" class="form-control" />
         </form>
         </div>
         <button id = "submitbutton" class="btn btn-primary" onclick = "submitChoices();"> Submit! </button>
