initial genre display code

--- a/webpage stuff/spotify_webpage/templates/genre.html.j2
+++ b/webpage stuff/spotify_webpage/templates/genre.html.j2
@@ -1,5 +1,14 @@
-<div class="card row justify-content-center align-items-center" >
-    <div class="card-body">
+<!-- <div class="card row justify-content-center align-items-center" > -->
 
-      <p>hi!</p>
+
+
+<div class="genre_wrapper">
+  <div class="">
+    <img id="genre_img" src="{{url_for('static',filename=path)}}">
+  </div>
+
+  <span>{{song_name}} by {{artist_name}}</span>
+  <span>was classified as <b>{{genre}}</b></span>
 </div>
+
+<!-- </div> -->
