--- a/webpage stuff/spotify_webpage/templates/base.html.j2
+++ b/webpage stuff/spotify_webpage/templates/base.html.j2
@@ -57,6 +57,7 @@
 
         </div>
 
+        <button class="navbar-toggler" type="button" class="btn btn-primary" data-toggle="modal" data-target="#genreModal">GENRE</span></button>
 
 
         <!-- Spotify Modal -->
@@ -128,7 +129,7 @@
 
 
         <!-- Genre Modal -->
-        <!-- <div class="modal fade" id="genreModal" tabindex="-1" role="dialog" aria-labelledby="genreModalLabel" aria-hidden="true">
+        <div class="modal fade" id="genreModal" tabindex="-1" role="dialog" aria-labelledby="genreModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -145,7 +146,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
 <div id="decision"> </div>
 
