--- a/webpage stuff/spotify_webpage/templates/genre.html.j2
+++ b/webpage stuff/spotify_webpage/templates/genre.html.j2
@@ -4,11 +4,11 @@
 
 <div class="genre_wrapper">
   <div class="">
-    <img id="genre_img" src="{{url_for('static',filename=path)}}">
+    <img id="genre_img" src="/static/genre_img/Classical.jpeg">
   </div>
 
-  <span>{{song_name}} by {{artist_name}}</span>
-  <span>was classified as <b>{{genre}}</b></span>
+  <span id="firstrow">{{song_name}} by {{artist_name}}</span>
+  <span id="secondrow">was classified as <b>{{genre}}</b></span>
 </div>
 
 <!-- </div> -->
