--- a/webpage stuff/spotify_webpage/templates/record.html.j2
+++ b/webpage stuff/spotify_webpage/templates/record.html.j2
@@ -1,12 +1,12 @@
 
 <div class="button-container">
             <div data-role="controls">
-                <button class="button">Record Your Own Audio</button>
+                <button class="btn btn-success">Record Your Own Audio</button>
             </div>
 
 
       <div data-role="recordings" id="record"></div>
 
 
-<p>Clip must be at least 30 seconds long!</p>
+<p class = "marginleft">Clip must be at least 30 seconds long!</p>
   </div>
