random modal is now connected!

--- a/webpage stuff/spotify_webpage/templates/base.html.j2
+++ b/webpage stuff/spotify_webpage/templates/base.html.j2
@@ -29,7 +29,6 @@
           <div class="container">
             <h1 class="display-3">Genre Classification</h1>
             <p>For our CS5 project, we decided to classify songs based on genre with machine learning.</p>
-            <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
           </div>
         </div>
 
@@ -144,7 +143,7 @@
               </div>
               <div class="modal-footer">
                 <a id="more_songs" href = "/" class="btn btn-success mr-auto">Submit Another Song! </a>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick = "removeGenre();">Close</button>
               </div>
             </div>
           </div>
