random go brrrr

--- a/webpage stuff/spotify_webpage/templates/random.html.j2
+++ b/webpage stuff/spotify_webpage/templates/random.html.j2
@@ -1,7 +1,7 @@
 
 <div class="button-container">
 
-      <button onclick='random();' class="button" >Generate Random Audio</button>
+      <button onclick='random();' class="btn btn-success" >Generate Random Audio</button>
 
       <div id='player' class="player"></div>
 
