--- a/webpage stuff/spotify_webpage/static/style.css
+++ b/webpage stuff/spotify_webpage/static/style.css
@@ -1,3 +1,10 @@
+#spectrogram
+{
+  display:none;
+  margin-left: auto;
+  margin-right: auto;
+  width:400px;
+}
 .marginleft
 {
   margin-left: 10px;
@@ -8,15 +15,15 @@
   background-color: #4d74eb;
   margin:auto;
   color:white;
-  height: 120px;
+  height: 80px;
   width: 300px;
   font-size: 30px;
+  margin-top: 20px;
 }
 #genrebutton:hover
 {
   display: none;
   background-color: #346beb;
-  margin:auto;
   background-color: #88a2f2;
   color: #4d74eb;
 
