--- a/webpage stuff/spotify_webpage/templates/genre.html.j2
+++ b/webpage stuff/spotify_webpage/templates/genre.html.j2
@@ -1,14 +1,10 @@
-<!-- <div class="card row justify-content-center align-items-center" > -->
-
-
-
 <div class="genre_wrapper">
   <div class="">
+  <!-- this image is changed depending on the genre result -->
     <img id="genre_img" src="static/genre_img/Classical.jpeg">
   </div>
 
+<!-- this text is also changed depending on the song/artist using ajax in functions.js-->
   <span id="firstrow">{{song_name}} by {{artist_name}}</span>
   <span id="secondrow">was classified as <b>{{genre}}</b></span>
 </div>
-
-<!-- </div> -->
