--- a/webpage stuff/spotify_webpage/templates/random.html.j2
+++ b/webpage stuff/spotify_webpage/templates/random.html.j2
@@ -1,8 +1,7 @@
-
 <div class="button-container">
-
+  <!--calls random function, which picks a random wav file and displays it -->
       <button onclick='random();' class="btn btn-success" >Generate Random Audio</button>
-
+<!-- div for the audio selected-->
       <div id='player' class="player"></div>
 
 
